--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,9 @@ body, * {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
+}
+body{
   background-color: #FAF9F6;
-
 }
 ::-webkit-scrollbar {
   width: 0px;
@@ -37,7 +38,7 @@ width: 100%;
   font-size: 29px;
   font-weight: 600;
   margin: 60px 0px;
-  color: #f02d34;
+  color: #BE264C;
 }
 .marquee {
   position: relative;
@@ -52,6 +53,7 @@ width: 100%;
   will-change: transform;
   animation: marquee 15s linear infinite;
   width: 180%;
+
 }
 .track:hover {
   animation-play-state: paused;
@@ -62,7 +64,7 @@ width: 100%;
 }
 
  span.text-red {
-    -webkit-text-stroke: 1px #f02d34;
+    -webkit-text-stroke: 1px #BE264C;
     margin-left: 6px;
 }
 .logo{
@@ -87,7 +89,7 @@ width: 100%;
   right: -8px;
   font-size: 12px;
   color: #eee;
-  background-color: #f02d34;
+  background-color: #BE264C;
   width: 18px;
   height: 18px;
   border-radius: 50%;
@@ -141,11 +143,12 @@ width: 100%;
 }
 .hero-banner-container .beats-solo{
   font-size: 20px;
+  background-color: #dcdcdc;
 }
 .hero-banner-container button{
    border-radius: 15px;
   padding: 10px 16px;
-  background-color: #f02d34;
+  background-color: #BE264C;
   color: white;
   border: none;
   margin-top: 40px;
@@ -213,7 +216,7 @@ text-align: end;
 }
 .footer-banner-container{
   padding: 100px 40px;
-  background-color: #f02d34;
+  background-color: #BE264C;
   border-radius: 15px;
   position: relative;
   height: 400px;
@@ -322,7 +325,7 @@ text-align: end;
 }
 .cart-num-items{
   margin-left: 10px;
-  color: #f02d34;
+  color: #BE264C;
 }
 .empty-cart{
   margin:40px;
@@ -378,7 +381,7 @@ padding: 20px 10px;
 }
 .remove-item{
   font-size: 24px;
-  color: #f02d34;
+  color: #BE264C;
   cursor: pointer;
   background: transparent;
   border: none;
@@ -406,7 +409,7 @@ padding: 30px 65px;
   margin-top: 10px;
   margin-top: 40px;
   text-transform: uppercase;
-  background-color: #f02d34;
+  background-color: #BE264C;
   color: #fff;
   cursor: pointer;
     transform: scale(1, 1);
@@ -434,7 +437,7 @@ padding: 30px 65px;
   transition: .3s ease-in-out;
 }
 .product-detail-image:hover{
-  background-color: #f02d34;
+  background-color: #BE264C;
 
 }
 .small-images-container{
@@ -451,10 +454,10 @@ padding: 30px 65px;
 }
 
 .selected-image{
-  background-color:#f02d34;
+  background-color:#BE264C;
 }
 .reviews{
-  color: #f02d34;
+  color: #BE264C;
   margin-top: 10px;
   display: flex;
   gap: 5px;
@@ -475,7 +478,7 @@ padding: 30px 65px;
   font-weight: 700 ;
   font-size: 26px;
   margin-top: 30px;
-  color:#f02d34;
+  color:#BE264C;
 }
 .price .old-price, .product-price .old-price, .price .old-price{
   color: gray;
@@ -493,12 +496,12 @@ padding: 30px 65px;
 }
 .buttons .add-to-cart{
   padding: 10px 20px;
-  border: 1px solid #f02d34 ;
+  border: 1px solid #BE264C ;
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
   background-color: white;
-  color: #f02d34;
+  color: #BE264C;
   cursor: pointer;
   width: 200px;
    transform: scale(1, 1);
@@ -511,7 +514,7 @@ padding: 30px 65px;
   width: 200px;
 
   padding: 10px 20px;
-  background-color: #f02d34;
+  background-color: #BE264C;
   color: white;
   border: none;
   margin-top: 40px;
@@ -535,7 +538,7 @@ padding: 6px;
 }
 .quantity-desc .minus{
   border-right: 1px solid gray;
-  color: #f02d34;
+  color: #BE264C;
 }
 .quantity-desc .num{
   border-right: 1px solid gray;
@@ -564,7 +567,7 @@ padding: 6px;
 }
 .max-qty{
   font-weight: 500;
-  color: #f02d34;
+  color: #BE264C;
 }
 .success-wrapper, .cancel-wrapper{
   background-color: white;
@@ -613,7 +616,7 @@ margin-top: 160px;
 }
 .success .description .email{
   margin-left: 5px;
-  color: #f02d34;
+  color: #BE264C;
 }
 .product-max-qty{
   margin-top: 10px;
